--- a/public/styler.css
+++ b/public/styler.css
@@ -1,240 +1,217 @@
 @font-face {
-        font-family: primary;
-        src: url(../assets/fonts/binggo-wood-display-serif.otf);
-    }
-    @font-face {
-        font-family: subtext;
-        src: url(../assets/fonts/GlacialIndifference-Regular.otf);
-    }
-
-    main.wrap {
-        width: 100%;
-    }
-    .navbar {
-        padding-left: 40px;
-        padding-right: 40px;
-        box-sizing: border-box;
-        width: 100%;
-        height: 64px;
-        background-color:beige;
-        display: flex;
-        justify-content: space-between;
-    } .navbar .title {
-        background-image: url(../assets/title.png);
-        width: 200px;
-        height: 60px;
-        background-size: cover;
-        /* border: 1px solid red; */
-        background-position-y: -66px;
-    } .navbar .menu {
-        display: flex;
-        width: fit-content;
-        height: 60px;
-    } .navbar .menu .nav {
-        font-family: primary;
-        width: 200px;
-        height: 60px;
-        border-left: 1px solid white;
-        border-right: 1px solid white;
-        justify-content: center;
-        font-size: 1.7em;
-        display: flex;
-        align-items: center;
-        text-decoration: none;
-        color: black;
-        font-weight: 850;
-        transition: all 0.2s ease-in-out;
-    } .navbar .menu .nav:hover {
-        color: white;
-        background-color: black;
-        cursor: pointer;
-    }
-    .scene {
-        width: 100%;
-        height: 650px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .one-carousel {
-        background-color: black;
-    } .one-carousel .maincarousel {
-        overflow: hidden;
-        width: 100%;
-        height: 650px;
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    } .one-carousel .maincarousel .carouselpic {
-        width: 100%;
-        height: 650px;
-        position: absolute;
-        left: 100%;
-        animation: carousel 20s ease-in-out infinite;
-        animation-delay: calc(3.24s*var(--delay));
-    } .one-carousel .maincarousel:after, .three-event:after {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 650px;
-        background: radial-gradient(transparent, black);
-    } .one-carousel .maincarousel .header {
-        z-index: 10;
-        font-family: primary;
-        color: white;
-        font-size: 6rem;
-        text-shadow: 3px 3px 3px black;
-    } .one-carousel .maincarousel .subtext {
-        z-index: 10;
-        font-family: subtext;
-        color: white;
-        font-size: 1.6rem;
-        font-weight: 100;
-        text-shadow: 3px 3px 3px black;
-    }
-    @keyframes drift {
-        from { background-position: 1% 0px; }
-        to { background-position: calc(100%*-1) -650px; }
-    }
-    @keyframes carousel {
-        0% {
-            translate: 0px;
-        } 1% {
-            translate: calc(100%*-1) 0px;
-        } 19% {
-            translate: calc(100%*-1) 0px;
-        } 20% {
-            translate: calc(100%*-2) 0px;
-        } 21% {
-            translate: calc(100%*-2) 0px;
-        } 39% {
-            translate: calc(100%*-2) 0px;
-        } 40% {
-            translate: 0px;
-            opacity: 0;
-        } 100% {
-            translate: 0px;
-            opacity: 1;
-        }
-    }
-    .two-about {
-        background-color: beige;
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    } .two-about:before {
-        content: '';
-        width: 100%;
-        height: 650px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-image: url(../assets/logo.png);
-        background-size: 40px 40px;
-        opacity: 0.2;
-        animation: drift 30s linear infinite;
-    } .two-about .about-container {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: fit-content;
-        height: fit-content;
-    } .about-desc {
-        display: flex;
-        flex-direction: column;
-    } .about-header {
-        color: black;
-        font-family: primary;
-        font-size: 4rem;
-        font-weight: 700;
-        font-style: italic;
-    } .about-text {
-        text-justify:auto;
-        width: 300px;
-        font-size: 1.1em;
-        font-family: subtext;
-    } .aboutpic {
-        background-image: url(../assets/photograph.png);
-        width: 500px;
-        height: 500px;
-        background-size: cover;
+    font-family: primary;
+    src: url(../assets/fonts/binggo-wood-display-serif.otf);
+}
+@font-face {
+    font-family: subtext;
+    src: url(../assets/fonts/GlacialIndifference-Regular.otf);
+}
+main.wrap {
+    width: 100%;
+}
+.navbar {
+    padding-left: 40px;
+    padding-right: 40px;
+    box-sizing: border-box;
+    width: 100%;
+    height: 64px;
+    background-color:beige;
+    display: flex;
+    justify-content: space-between;
+} .navbar .title {
+    background-image: url(../assets/title.png);
+    width: 200px;
+    height: 60px;
+    background-size: cover;
+    /* border: 1px solid red; */
+    background-position-y: -66px;
+} .navbar .menu {
+    display: flex;
+    width: fit-content;
+    height: 60px;
+} .navbar .menu .nav {
+    font-family: primary;
+    width: 150px;
+    height: 60px;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    justify-content: center;
+    font-size: 1.7em;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    font-weight: 850;
+    transition: all 0.2s ease-in-out;
+} .navbar .menu .nav:hover {
+    color: white;
+    background-color: black;
+    cursor: pointer;
+}
+.scene {
+    width: 100%;
+    height: 650px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+}
+.semi { height: 400px; }
+.one-carousel {
+    background-color: black;
+} .one-carousel .maincarousel {
+    overflow: hidden;
+    width: 100%;
+    height: 650px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+} .one-carousel .maincarousel .carouselpic {
+    width: 100%;
+    height: 650px;
+    position: absolute;
+    left: 100%;
+    animation: carousel 20s ease-in-out infinite;
+    animation-delay: calc(3.24s*var(--delay));
+} .one-carousel .maincarousel:after, .three-event:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 650px;
+    background: radial-gradient(transparent, black);
+} .one-carousel .maincarousel .header, .header {
+    z-index: 10;
+    font-family: primary;
+    color: white;
+    font-size: 6rem;
+    text-shadow: 3px 3px 3px black;
+} .one-carousel .maincarousel .subtext {
+    z-index: 10;
+    font-family: subtext;
+    color: white;
+    font-size: 2.5dvw;
+    font-weight: 100;
+    width: 1200px;
+    text-align: center;
+    text-shadow: 3px 3px 3px black;
+}
+@keyframes drift {
+    from { background-position: 1% 0px; }
+    to { background-position: calc(100%*-1) -650px; }
+}
+@keyframes carousel {
+    0% {
+        translate: 0px;
+    } 1% {
+        translate: calc(100%*-1) 0px;
+    } 19% {
+        translate: calc(100%*-1) 0px;
+    } 20% {
+        translate: calc(100%*-2) 0px;
+    } 21% {
+        translate: calc(100%*-2) 0px;
+    } 39% {
+        translate: calc(100%*-2) 0px;
+    } 40% {
+        translate: 0px;
+        opacity: 0;
+    } 100% {
+        translate: 0px;
         opacity: 1;
-        z-index: 2;
     }
-    .three-event {
-        position: relative;
-        background-color: rgb(69, 69, 69);
-        display: flex;
-        justify-content: center;
-    } .three-event .event-container {
-        width: 400px;
-        height: 700px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    } .three-event .event-container .event-header {
-        color: white;
-        font-size: 6rem;
-        text-shadow: 3px 3px 3px black;
-    }
-    .four-rates, .five-contacts {
-        background-color: beige;
-        height: fit-content;
-    } .rates-header, .contact-header {
-        color: black;
-        font-weight: 800;
-        font-size: 6rem;
-        text-shadow: 3px 3px 3px white;
-    } .booth-container {
-        width: 100%;
-        height: fit-content;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        gap: 60px;
-        margin-bottom: 100px;
-    } .booths {
-        height: 300px;
-        width: 300px;
-        background-color: black;
-        border: 20px solid white;
-        border-bottom: 80px solid white;
-        box-shadow: 4px 4px 4px black;
-        rotate: calc(20deg*var(--cor));
-        transition: 0.2s ease-in-out;
-    } .booths:hover {
-        cursor: pointer;
-        scale: 1.1;
-        rotate: 10deg;
-    } .contacters {
-        width: 100%;
-        height: 800px;
-        position: relative;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        overflow: hidden;
-    } .contacters .booths {
-        z-index: 0;
-        background-color: beige;
-        background-size: cover;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    } .contacters:after {
-        content: '';
-        width: 100%;
-        height: 690px;
-        top: 0;
-        left: 0;
-        position: absolute;
-        background-image: url(../assets/rope.png);
-        background-size: cover;
-        background-position-y: -450px;
-        pointer-events: none;
-    }
+}
+@keyframes float {
+    from { translate: 0px 0px; scale: 1;}
+    to { translate: 0px -25px; scale: 1.02;}
+}
+@keyframes marq {
+    55% { scale: 0.7; transform: rotateY(0deg); }
+    100% {left: calc(200px * -1); transform: rotateY(80deg) scale(0.8);}
+}
+.two-about {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+} .two-about .about-container {
+    display: flex;
+    width: fit-content;
+    height: fit-content;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    padding-top: 100px;
+} .about-desc {
+    width: 300px;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+} .about-pic {
+    width: 350px;
+    height: 350px;
+    background-image: url(../assets/photograph.png);
+    background-size: cover;
+    rotate: 15deg;
+    animation: float 2.6s ease-in-out infinite alternate;
+} .about-header {
+    font-family: primary;
+    font-size: 4rem;
+    font-weight: 800;
+    color: black;
+    text-align: center;
+} .about-text {
+    font-family: subtext;
+    font-size: 1.4rem;
+    font-weight: bold;
+    color: black;
+    text-align: justify;
+    text-indent: 20px;
+} .about-btn {
+    color: black;
+    font-family: subtext;
+    text-align: center;
+    font-size: 1.5rem;
+    border-radius: 20px;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    height: 50px;
+    padding: 0px 10px 0px 10px;
+    border: 2px solid black;
+    margin: 20px;
+    transition: 0.2s ease-out;
+} .about-btn:hover {
+    scale: 0.89;
+    font-family: primary;
+    background-color: black;
+    color: white;
+    box-shadow: 3px 3px 3px gray, -3px -3px 3px gray;
+    cursor: pointer;
+}
+.samples {
+    display: flex;
+    height: 300px;
+    width: 100%;
+    position: relative;
+    mask-image: linear-gradient(90deg, transparent, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), transparent);
+    overflow: hidden;
+    perspective: 800px;
+    background-color: white;
+} .samples .samp {
+    position: absolute;
+    height: 300px;
+    width: 200px;
+    left: max(calc(200px * 8), 100%);
+    animation: marq 30s linear infinite;
+    animation-delay: calc((30s/8) * (8 - var(--delay)) * -1);
+    box-shadow: 5px 5px 5px black;
+    transition: all 0.2s ease-in-out;
+    scale: 1;
+    transform: rotateY(-160deg);
+    transform-style: preserve-3d;
+    background-size: cover;
+}
