--- a/public/styler.css
+++ b/public/styler.css
@@ -19,24 +19,24 @@ main.wrap {
     display: flex;
     justify-content: space-between;
 } .navbar .title {
-    background-image: url(../assets/title.png);
-    width: 200px;
+    background-image: url(../assets/logosmall.png);
+    width: 90px;
     height: 60px;
     background-size: cover;
+    background-position: center center;
     /* border: 1px solid red; */
-    background-position-y: -66px;
 } .navbar .menu {
     display: flex;
     width: fit-content;
     height: 60px;
 } .navbar .menu .nav {
     font-family: primary;
-    width: 150px;
+    width: 120px;
     height: 60px;
     border-left: 1px solid white;
     border-right: 1px solid white;
     justify-content: center;
-    font-size: 1.7em;
+    font-size: 1.2em;
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -47,7 +47,7 @@ main.wrap {
     color: white;
     background-color: black;
     cursor: pointer;
-}
+} .navbar .dropdown {display:none; visibility: hidden;}
 .scene {
     width: 100%;
     height: 650px;
@@ -197,7 +197,7 @@ main.wrap {
     height: 300px;
     width: 100%;
     position: relative;
-    mask-image: linear-gradient(90deg, transparent, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1), transparent);
+    mask-image: linear-gradient(90deg, transparent, #000, #000, transparent);
     overflow: hidden;
     perspective: 800px;
     background-color: white;
@@ -214,4 +214,59 @@ main.wrap {
     transform: rotateY(-160deg);
     transform-style: preserve-3d;
     background-size: cover;
+}
+
+@media screen and (max-width: 650px) {
+    .navbar .menu .nav, .navbar .menu {
+        display: none;
+        visibility: hidden;
+        width: 0px;
+        height: 0px;
+    }
+    .navbar .dropdown {
+        display: block;
+        visibility: visible;
+    } .dropdown .nav {
+        font-family: primary;
+        width: 100%;
+        height: 60px;
+        border-left: 1px solid white;
+        border-right: 1px solid white;
+        justify-content: center;
+        font-size: 1.5em;
+        display: flex;
+        align-items: center;
+        text-decoration: none;
+        color: black;
+        font-weight: 850;
+        transition: all 0.2s ease-in-out;
+        background-color: beige;
+    } .dropdown .nav:active {
+        color: white;
+        background-color: black;
+        cursor: pointer;
+    } .dropdown .navdrop {
+        background-color: beige;
+        width: 100px;
+        height: 60px;
+        color: black;
+        font-family: primary;
+        font-size: 1.5rem;
+        border-left: 2px solid white;
+        border-right: 2px solid white;
+        display: flex;
+        justify-content: center;
+    } .dropdown .navdrop span {
+        width: 5em;
+        height: 2.5em;
+    } .dropdown .navdrop:active, .dropdown .navdrop:focus-visible {
+        background-color: rgba(245, 245, 220, 0.749);
+    }
+    .one-carousel .maincarousel .subtext {
+        font-size: 1.0em;
+        text-wrap: wrap;
+        width: 100%;
+    } .one-carousel .maincarousel .header {
+        font-size: 5em;
+    }
 }
