--- a/public/styler.css
+++ b/public/styler.css
@@ -1,10 +1,14 @@
 @font-face {
     font-family: primary;
-    src: url(../assets/fonts/binggo-wood-display-serif.otf);
+    src: url(../assets/fonts/FiraCode-Regular.ttf);
 }
 @font-face {
     font-family: subtext;
     src: url(../assets/fonts/GlacialIndifference-Regular.otf);
+}
+@font-face {
+    font-family: subtext-bold;
+    src: url(../assets/fonts/GlacialIndifference-Bold.otf);
 }
 main.wrap {
     width: 100%;
@@ -14,39 +18,39 @@ main.wrap {
     padding-right: 40px;
     box-sizing: border-box;
     width: 100%;
-    height: 64px;
-    background-color:beige;
+    height: 50px;
+    background-color:white;
     display: flex;
     justify-content: space-between;
 } .navbar .title {
-    background-image: url(../assets/logosmall.png);
+    background-image: url(../assets/logo.png);
     width: 90px;
-    height: 60px;
+    height: 50px;
     background-size: cover;
     background-position: center center;
     /* border: 1px solid red; */
 } .navbar .menu {
     display: flex;
     width: fit-content;
-    height: 60px;
+    height: 50px;
 } .navbar .menu .nav {
-    font-family: primary;
+    font-family: subtext;
     width: 120px;
-    height: 60px;
+    height: 50px;
     border-left: 1px solid white;
     border-right: 1px solid white;
     justify-content: center;
-    font-size: 1.2em;
+    font-size: 0.9em;
     display: flex;
     align-items: center;
     text-decoration: none;
     color: black;
-    font-weight: 850;
     transition: all 0.2s ease-in-out;
 } .navbar .menu .nav:hover {
     color: white;
     background-color: black;
     cursor: pointer;
+    text-decoration: underline;
 } .navbar .dropdown {display:none; visibility: hidden;}
 .scene {
     width: 100%;
@@ -58,71 +62,39 @@ main.wrap {
 }
 .semi { height: 400px; }
 .one-carousel {
-    background-color: black;
-} .one-carousel .maincarousel {
-    overflow: hidden;
-    width: 100%;
-    height: 650px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    background-image: url(../assets/2017.gif);
+    background-size: cover;
     justify-content: center;
-} .one-carousel .maincarousel .carouselpic {
-    width: 100%;
-    height: 650px;
-    position: absolute;
-    left: 100%;
-    animation: carousel 20s ease-in-out infinite;
-    animation-delay: calc(3.24s*var(--delay));
-} .one-carousel .maincarousel:after, .three-event:after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 650px;
-    background: radial-gradient(transparent, black);
-} .one-carousel .maincarousel .header, .header {
-    z-index: 10;
+    position: relative;
+    height: 600px;
+} .one-carousel .header {
+    width: clamp(450px, 50dvw, 600px);
+    height: 200px;
+    background-image: url(../assets/title.png);
+    filter:invert(100);
+    background-size: cover;
+    background-position: center;
+} .presser {
+    width: 240px;
+    height: 65px;
     font-family: primary;
-    color: white;
-    font-size: 6rem;
-    text-shadow: 3px 3px 3px black;
-} .one-carousel .maincarousel .subtext {
-    z-index: 10;
-    font-family: subtext;
-    color: white;
-    font-size: 2.5dvw;
-    font-weight: 100;
-    width: 1200px;
-    text-align: center;
-    text-shadow: 3px 3px 3px black;
+    background-color: #1b0a02;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    letter-spacing: 5px;
+    position: absolute;
+    right: 50px;
+    bottom: 50px;
+    transition: 0.2s ease-in-out;
+} .presser:hover {
+    width: 270px;
+    box-shadow: 3px 3px 6px white, -3px -3px 6px white;
+    cursor: pointer;
 }
 @keyframes drift {
     from { background-position: 1% 0px; }
     to { background-position: calc(100%*-1) -650px; }
-}
-@keyframes carousel {
-    0% {
-        translate: 0px;
-    } 1% {
-        translate: calc(100%*-1) 0px;
-    } 19% {
-        translate: calc(100%*-1) 0px;
-    } 20% {
-        translate: calc(100%*-2) 0px;
-    } 21% {
-        translate: calc(100%*-2) 0px;
-    } 39% {
-        translate: calc(100%*-2) 0px;
-    } 40% {
-        translate: 0px;
-        opacity: 0;
-    } 100% {
-        translate: 0px;
-        opacity: 1;
-    }
 }
 @keyframes float {
     from { translate: 0px 0px; scale: 1;}
@@ -133,57 +105,51 @@ main.wrap {
     100% {left: calc(200px * -1); transform: rotateY(80deg) scale(0.8);}
 }
 .two-about {
-    display: flex;
-    justify-content: center;
+    background-color: #f1ede9;
     align-items: center;
+    height: fit-content;
+    padding: 80px 0px 90px 0px;
 } .two-about .about-container {
     display: flex;
-    width: fit-content;
+    width: clamp(300px, 80%, 1200px);
     height: fit-content;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
-    padding-top: 100px;
+    justify-content: space-between;
 } .about-desc {
-    width: 300px;
+    width: clamp(300px, 80%, 555px);
     height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
+    border-radius: 36px;
+    box-sizing: border-box;
+    padding: 1px 20px 20px 20px;
 } .about-pic {
     width: 350px;
-    height: 350px;
-    background-image: url(../assets/photograph.png);
+    height: 700px;
+    background-image: url(../assets/photoshoot.png);
     background-size: cover;
-    rotate: 15deg;
+    background-position: center center;
+    background-repeat: no-repeat;
     animation: float 2.6s ease-in-out infinite alternate;
 } .about-header {
-    font-family: primary;
+    font-family: subtext-bold;
     font-size: 4rem;
-    font-weight: 800;
     color: black;
-    text-align: center;
+    letter-spacing: 16px;
+    align-self: flex-start;
 } .about-text {
-    font-family: subtext;
-    font-size: 1.4rem;
-    font-weight: bold;
+    font-family: primary;
+    font-size: 1.1em;
     color: black;
     text-align: justify;
-    text-indent: 20px;
+    margin-left: 25px;
+    margin-right: 25px;
 } .about-btn {
-    color: black;
-    font-family: subtext;
-    text-align: center;
-    font-size: 1.5rem;
-    border-radius: 20px;
-    width: fit-content;
-    display: flex;
-    align-items: center;
-    height: 50px;
-    padding: 0px 10px 0px 10px;
-    border: 2px solid black;
-    margin: 20px;
-    transition: 0.2s ease-out;
+    position: static;
+    align-self: flex-end;
 } .about-btn:hover {
     scale: 0.89;
     font-family: primary;
@@ -227,9 +193,9 @@ main.wrap {
         display: block;
         visibility: visible;
     } .dropdown .nav {
-        font-family: primary;
+        font-family: subtext;
         width: 100%;
-        height: 60px;
+        height: 50px;
         border-left: 1px solid white;
         border-right: 1px solid white;
         justify-content: center;
@@ -240,15 +206,15 @@ main.wrap {
         color: black;
         font-weight: 850;
         transition: all 0.2s ease-in-out;
-        background-color: beige;
+        background-color: white;
     } .dropdown .nav:active {
         color: white;
         background-color: black;
         cursor: pointer;
     } .dropdown .navdrop {
-        background-color: beige;
+        background-color: white;
         width: 100px;
-        height: 60px;
+        height: 50px;
         color: black;
         font-family: primary;
         font-size: 1.5rem;
@@ -259,14 +225,8 @@ main.wrap {
     } .dropdown .navdrop span {
         width: 5em;
         height: 2.5em;
-    } .dropdown .navdrop:active, .dropdown .navdrop:focus-visible {
-        background-color: rgba(245, 245, 220, 0.749);
-    }
-    .one-carousel .maincarousel .subtext {
-        font-size: 1.0em;
-        text-wrap: wrap;
-        width: 100%;
-    } .one-carousel .maincarousel .header {
-        font-size: 5em;
+    } 
+    .about-header {
+        font-size: 2.5em;
     }
 }
