--- a/public/styler.css
+++ b/public/styler.css
@@ -21,6 +21,7 @@ main.wrap {
     align-items: center;
 }
 .semi { height: 400px; }
+.navdrop { height: 50px;}
 .one-carousel {
     background-image: url(../assets/2017.gif);
     background-size: cover;
@@ -122,28 +123,37 @@ main.wrap {
 
 .samples {
     display: flex;
-    height: 650px;
+    height: 700px;
     width: 100%;
     overflow: hidden;
-    background-image: url(../assets/Film.png);
+    background-color: white;
     background-size: cover;
     background-position: center top;
     flex-direction: column;
     align-items: center;
-} .samples-title {
-    color: white;
+    position: relative;
+} .samples:after{
+    content: 'FEATURED';
+    color: black;
+    position: absolute;
     font-family: subtext-bold;
-    font-size: 5rem;
-    text-shadow: 4px 4px 4px black;
+    font-size: 4.5rem;
+    text-shadow: 4px 4px 4px gray;
 } .samples .samp {
-    width: 400px;
-    height: 200px;
+    width: 100%;
+    height: 700px;
+    mask-image: url(../public/photos/fisheyes.png);
+    mask-size: cover;
+    perspective: 800px;
 } .samples .samp .pics {
     width: 100%;
-    height: 200px;
+    height: 700px;
     box-sizing: border-box;
-    border-left: 20px solid white;
-    border-right: 20px solid white;
+    border-left: 10px solid white;
+    border-right: 10px solid white;
+    cursor:pointer;
+} .samples .samp .pics:hover {
+    /* filter: blur(3px); */
 }
 
 @media screen and (max-width: 650px) {
