--- a/public/styler.css
+++ b/public/styler.css
@@ -145,15 +145,43 @@ main.wrap {
     mask-image: url(../public/photos/fisheyes.png);
     mask-size: cover;
     perspective: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 } .samples .samp .pics {
     width: 100%;
     height: 700px;
     box-sizing: border-box;
-    border-left: 10px solid white;
-    border-right: 10px solid white;
+    border-left: 17px solid white;
+    border-right: 17px solid white;
     cursor:pointer;
 } .samples .samp .pics:hover {
-    /* filter: blur(3px); */
+    filter: blur(3px);
+} .samples .samp .pics:hover ~ .event {
+    opacity: 1;
+} .samples .samp .event {
+    opacity: 0;
+    position: absolute;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 700px;
+    pointer-events: none;
+    text-shadow: 3px 3px 3px black;
+    transition: all 0.2s ease-out;
+} .samples .samp .event .name {
+    color: white;
+    font-family: subtext-bold;
+    font-size: 2rem;
+    text-align: center;
+} .samples .samp .event .date {
+    color: white;
+    font-family: subtext;
+    font-size: 1.5rem;
+    text-align: center;
 }
 
 @media screen and (max-width: 650px) {
